--- a/.github/workflows/build-spargeattn.yml
+++ b/.github/workflows/build-spargeattn.yml
@@ -23,6 +23,11 @@ on:
         required: true
         type: string
         default: '0'
+      cuda_major:
+        description: CUDA major version
+        required: true
+        type: string
+        default: '12'
       cuda_minor:
         description: CUDA minor version
         required: true
@@ -53,10 +58,11 @@ jobs:
   build-spargeattn:
     runs-on: windows-large
     steps:
-      - uses: actions/setup-python@v5
+      - uses: actions/setup-python@v6
         with:
           python-version: '3.12'
 
+      # MSVC 14.43 and 14.44 do not work, see https://developercommunity.visualstudio.com/t/10912960
       - name: Install MSVC v14.42
         shell: powershell
         run: |
@@ -64,21 +70,20 @@ jobs:
           .\PortableBuildTools.exe accept_license msvc=14.42.17.12 sdk=26100 target=x64 host=x64 env=none path="C:\BuildTools"
 
       # - uses: ilammy/msvc-dev-cmd@v1
-      #   with:
-      #     toolset: 14.42
 
-      - uses: Jimver/cuda-toolkit@v0.2.22
+      # https://github.com/Jimver/cuda-toolkit/issues/395
+      # - uses: Jimver/cuda-toolkit@v0.2.22
+      - uses: N-Storm/cuda-toolkit@v0.2.28
         with:
-          cuda: 12.${{ inputs.cuda_minor }}.${{ inputs.cuda_patch }}
+          cuda: ${{ inputs.cuda_major }}.${{ inputs.cuda_minor }}.${{ inputs.cuda_patch }}
           use-github-cache: false
-          use-local-cache: false
 
       - name: Build wheel
         shell: powershell
         run: |
           C:\BuildTools\devcmd.ps1
 
-          Get-ChildItem Env:
+          # Get-ChildItem Env:
           # (Get-WmiObject Win32_Processor).Name
           # (Get-WmiObject Win32_PhysicalMemory | Measure-Object -Property Capacity -Sum).Sum / 1GB
           # (Get-WmiObject Win32_VideoController).Name
@@ -93,6 +98,7 @@ jobs:
           cd SpargeAttn
           git rev-parse HEAD
 
+          $Env:CUDA_MAJOR_VERSION = "${{ inputs.cuda_major }}"
           $Env:CUDA_MINOR_VERSION = "${{ inputs.cuda_minor }}"
           $Env:TORCH_MINOR_VERSION = "${{ inputs.torch_minor }}"
           $Env:TORCH_PATCH_VERSION = "${{ inputs.torch_patch }}"
@@ -104,20 +110,24 @@ jobs:
 
           $Env:DISTUTILS_USE_SDK = "1"
           $Env:TORCH_CUDA_ARCH_LIST = "8.0 8.6 8.9 9.0 "
-          if ($Env:CUDA_MINOR_VERSION -gt "6")
+          if (($Env:CUDA_MAJOR_VERSION -gt "12") -or ($Env:CUDA_MINOR_VERSION -gt "6"))
           {
             $Env:TORCH_CUDA_ARCH_LIST += "12.0 "
           }
           $Env:TORCH_CUDA_ARCH_LIST += "${{ inputs.extra_cuda_arch }}"
-          $Env:SPAS_SAGE_ATTN_WHEEL_VERSION_SUFFIX = "+cu12${{ inputs.cuda_minor }}torch2.${{ inputs.torch_minor }}.${{ inputs.torch_patch }}"
+          $Env:SPAS_SAGE_ATTN_WHEEL_VERSION_SUFFIX = "+cu${{ inputs.cuda_major }}${{ inputs.cuda_minor }}torch2.${{ inputs.torch_minor }}.${{ inputs.torch_patch }}"
           $Env:SPAS_SAGE_ATTN_WHEEL_VERSION_SUFFIX += "${{ inputs.extra_wheel_version_suffix }}"
           if ("${{ inputs.is_python_abi3 }}")
           {
-            $Env:CIBW_BUILD = "{cp39-win_amd64,}"
+            $Env:CIBW_BUILD = "{cp310-win_amd64,}"
           }
           else
           {
-            if ($Env:TORCH_MINOR_VERSION -gt "5")
+            if ($Env:TORCH_MINOR_VERSION -gt "8")
+            {
+              $Env:CIBW_BUILD = "{cp310-win_amd64,cp311-win_amd64,cp312-win_amd64,cp313-win_amd64,cp314-win_amd64}"
+            }
+            elseif ($Env:TORCH_MINOR_VERSION -gt "5")
             {
               $Env:CIBW_BUILD = "{cp39-win_amd64,cp310-win_amd64,cp311-win_amd64,cp312-win_amd64,cp313-win_amd64}"
             }
