--- a/.github/workflows/build-sageattn3.yml
+++ b/.github/workflows/build-sageattn3.yml
@@ -62,9 +62,7 @@ jobs:
         with:
           python-version: '3.12'
 
-      # https://github.com/Jimver/cuda-toolkit/issues/395
-      # - uses: Jimver/cuda-toolkit@v0.2.22
-      - uses: N-Storm/cuda-toolkit@v0.2.28
+      - uses: Jimver/cuda-toolkit@v0.2.29
         with:
           cuda: ${{ inputs.cuda_major }}.${{ inputs.cuda_minor }}.${{ inputs.cuda_patch }}
           use-github-cache: false
