--- a/.github/workflows/build-triton.yml
+++ b/.github/workflows/build-triton.yml
@@ -27,6 +27,11 @@ on:
         required: true
         type: string
         default: '0'
+      triton_rel_build_with_asserts:
+        description: Build with PDB and asserts
+        required: true
+        type: string
+        default: '0'
       cibw_build_override:
         description: CIBW_BUILD override
         required: false
@@ -64,6 +69,7 @@ jobs:
           $Env:TRITON_BUILD_BINARY = "${{ inputs.triton_build_binary }}"
           $Env:TRITON_BUILD_PROTON = "${{ inputs.triton_build_proton }}"
           $Env:TRITON_BUILD_UT = "${{ inputs.triton_build_ut }}"
+          $Env:TRITON_REL_BUILD_WITH_ASSERTS = "${{ inputs.triton_rel_build_with_asserts }}"
           $Env:TRITON_WHEEL_VERSION_SUFFIX = "${{ inputs.triton_wheel_version_suffix }}"
           if ("${{ inputs.cibw_build_override }}")
           {
