--- a/.github/workflows/build-sageattn3.yml
+++ b/.github/workflows/build-sageattn3.yml
@@ -56,7 +56,7 @@ on:
 
 jobs:
   build-sageattn3:
-    runs-on: windows-large
+    runs-on: self-hosted
     steps:
       - uses: actions/setup-python@v6
         with:
